Changed catalyst XP drops for infected players, cleaned up some code